tests/base/parser/bad/lmodule-import-cid-with.scilla
scilla_version 0

(* unnecessary semi colon *)
import BoolUtils ;

contract Test
()
